# ai-news-verse

./: README.md
backend/: .env.dev  .gitignore  pyproject.toml
backend/app/: __init__.py  background_services.py  celery_app.py  config.py  exceptions.py  log.py  notifications.py  repository.py  response.py  server.py
backend/app/ai/: __init__.py  llms.py  models.py  news_title_generator.py  pinecone_db.py
backend/app/auth/: dependencies.py  exceptions.py  utils.py
backend/app/background_tasks/: celery_app.py  news_tasks.py  tasks.py
backend/app/controllers/: ai_news_service.py  auth.py  caching.py
backend/app/database/: main.py  repository.py
backend/app/db/: main.py
backend/app/models/: ai_news_service.py  auth.py
backend/app/news_service/: __init__.py  _base.py  anthropic.py  google.py  hackernoon.py  openai.py  types.py  utils.py
backend/app/routes/: __init__.py  auth_routes.py  news_service_routes.py
backend/app/schemas/: ai_news_service.py  auth.py
backend/app/services/: __init__.py  ai_news_service.py  auth.py
backend/migrations/: env.py
backend/migrations/versions/: 07a30f4dd056_enum_creating.py  16a322580279_fixed_name_of_the_fields.py  18de3f8382ca_increased_varchart_length.py  1cb03b4b5107_added_added_by_users_column_in_category_.py  219057726572_published_at_to_published_on.py  29384e84546f_try.py  33023b368863_changed_colums_name_uuid_to_actual.py  456e98cd00e1_added_indexes_in_subcategory_id_field_.py  4a3fac3a1857_added_usercategories_and_.py  57efdd0a01b6_varchar_to_text_in_google_url.py  64dd7d63b3e1_varchar_to_text_in_all.py  (+11 more)
(+74 files in other folders)
