[project]
name = "ainewsaggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "docling>=2.62.0",
    "fastapi[standard]>=0.121.2",
    "feedparser>=6.0.12",
    "passlib>=1.7.4",
    "playwright>=1.56.0",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "youtube-transcript-api>=1.2.3",
    "groq>=0.36.0",
    "redis[asyncio]>=7.1.0",
    "argon2-cffi>=25.1.0",
    "annotated-doc>=0.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
